--- a/InventoryApp/InventoryApp.csproj
+++ b/InventoryApp/InventoryApp.csproj
@@ -16,5 +16,6 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.OpenApi" Version="1.2.3" />
   </ItemGroup>
 </Project>
